k8s/envoy-gateway/auth/gateway-wide-auth-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: gateway-wide-auth-policy
  # namespace: gateway
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway # Apply to entire gateway
  extAuth:
    http:
      backendRef:
        name: inbound-filter-svc  # Tên service ở trên
        namespace: default
        port: 8080
      # Headers to forward to auth service
      headersToBackend:
      - "Authorization"
      - "x-user-id" 
      - "Cookie"
